# haskell-exercises

./: .gitignore  LICENSE
exam/: exam1.hs
exam/fp24-exam-template/: README.md  fp-exam.cabal
exam/fp24-exam-template/src/: Ex1FunctionsListsRecursion.hs  Ex2HigherOrderFunctions.hs  Ex3LazyEvaluation.hs  Ex4TypeClasses.hs  Ex5Monads.hs  Ex6GADTs.hs  Ex7LambdaCalculus.hs  Ex8GenericProgramming.hs  LibGenerics.hs  LibParser.hs
exercises/: Ex1.hs  Ex10.hs  Ex1_rep.hs  Ex1_rep1.hs  Ex2.hs  Ex2_rep.hs  Ex2_rep1.hs  Ex3.hs  Ex3_rep.hs  Ex3_rep1.hs  Ex4.hs  Ex4_rep.hs  Ex4_rep1.hs  Ex5.hs  Ex6.hs  Ex6_rep.hs  Ex6_rep1.hs  Ex7.hs  Ex8.hs  Ex9.hs  Parser.hs
exercises/TicTacToe/app/: Main.hs
notes/: L2.hs  L3.hs  L4.hs  Monoid.hs  gadt.hs  l1.hs  lambda_caclulus.hs  list_practice.hs  monad_transformers.hs  record_notes.hs
solutions_exercises/: Ex10Solution.hs
